fix:rigth for right

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <canva class="canvas1"></canva>
-        <canva class="canvas2"></canva>
-        <canva class="canvas3"></canva>
-        <canva class="canvas4"></canva>
-        <canva class="canvas5"></canva>
+        <canvas id="canvas1"></canvas>
+        <canvas id="canvas2"></canvas>
+        <canvas id="canvas3"></canvas>
+        <canvas id="canvas4"></canvas>
+        <canvas id="canvas5"></canvas>
     </div>
     <script src="setup.js"></script>
     <script src="frogger.js"></script>
