--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frogger</title>
+    <title>Frogg js | Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <canvas id="canvas1"></canvas>
-        <canvas id="canvas2"></canvas>
-        <canvas id="canvas3"></canvas>
-        <canvas id="canvas4"></canvas>
-        <canvas id="canvas5"></canvas>
+    <div id="menu">
+        <a href="/main.html"><input type="button" value="Iniciar"></a>
     </div>
-    <script src="setup.js"></script>
-    <script src="frogger.js"></script>
-    <script src="particles.js"></script>
-    <script src="ripples.js"></script>
-    <script src="obstacles.js"></script>
-    <script src="utilities.js"></script>
+    
 </body>
 </html>
