--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frogg js | Home</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Frogger js | Home</title>
+    <link rel="stylesheet" href="./src/styles/style.css">
 </head>
 <body>
     <div id="menu">
-        <a href="/main.html"><input type="button" value="Iniciar"></a>
+        <a href="./src/main.html"><input type="button" value="Iniciar"></a>
     </div>
     
 </body>
