fix: frogger jump under obstacles,add death falling outside obstacles,add river death effect

--- a/src/gameOver.html
+++ b/src/gameOver.html
@@ -14,6 +14,7 @@
             <img src="./assets//general/sad-frog.png" alt="sad-frog">
             <a href="./main.html"><input class ="continue" type="button" value="Continue"></a>
             <a href="../index.html"><input class ="home" type="button" value="Home"></a>
+            <input  id="leaderboard" type="text" value="100">
         </div>
         
 
