add: backend service

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" href="./src/styles/style.css">
 </head>
 <body>
-    <div id="menu">
-        <a href="./src/main.html"><input type="button" value="Iniciar"></a>
+    <div id="login-area">
+        <label for="user">User</label>
+        <input type="text" id="username" placeholder="Digite seu usuário aqui">
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Digite sua senha aqui">
+        <button id="login-btn">Entrar</button>
+        <button id="register-btn">Cadastrar</button>
     </div>
-    
+    <div id="menu">
+        <!-- <a href="./src/main.html"><input type="button" value="Iniciar"></a> -->
+    </div>
+    <script src="./src/login.js"></script>
 </body>
 </html>
